segunda pagina terminada inicio al 3

--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div id="header">
+        <div id="nav">
+            <ul>
+                <li>
+                    <a href="pagina2.html"> PAGINA 2</a>
+                </li>
+                <li>
+                    <a href="pagina3.html"> Enlace 3</a>
+                </li>
+                <li>
+                    <a href="pagina4.html"> Enlace 3</a>
+                </li>
+                <li>
+                    <a href="pagina5.html"> Enlace 5</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div id="aside-left">TECNOLOGIAS WEB</div>
+        <div id="main">
+            <div id="article">
+                <div id="secction-1">En esta primera parte se llevara acabo el uso de bloques de las etiquetas div y spam que son los elementos genericos de la primera parte de este trabajo, en la segunda pagina veremos elementos semanticos, luego la pagina 3 elementos de texto y por ultimo tabls que estan en los enlaces anteriormente  </div>
+                <div id="secction-2">Div todo el BLOQUE y Spam es de LINEA</div>
+            </div>
+        </div>
+    <div id="aside-rigth">SISTEMAS DE INFORMACION</div>
+
+    <div id="footer">FECHA DE ENTREGA 3O DE SEPTIEMBRE DEL 2024</div>
     
+    <spam >EL SIGUIENTE BLOQUE PRESENTARAN LOS LINK A LAS OTRAS PAGINA</spam>
 </body>
 </html>
