--- a/pagina3.html
+++ b/pagina3.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!--ENCABEZADOS-->
     <div class="encabezados">
-        <h1>Beetles</h1>
-        <h2>External morphology</h2>
+        <h1>TAMAÑO 1</h1>
+        <h2>SEGUNDO TAMAÑO</h2>
             <h3>Head</h3>
                 <h4>Mouthparts</h4>
             <h3>Thorax</h3>
