--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                     <a href="pagina2.html"> PAGINA 2</a>
                 </li>
                 <li>
-                    <a href="pagina3.html"> Enlace 3</a>
+                    <a href="pagina3.html"> PAGINA 3</a>
                 </li>
                 <li>
-                    <a href="pagina4.html"> Enlace 3</a>
+                    <a href="pagina4.html"> PAGINA 3</a>
                 </li>
                 <li>
-                    <a href="pagina5.html"> Enlace 5</a>
+                    <a href="pagina5.html"> PAGINA 5</a>
                 </li>
             </ul>
         </div>
