--- a/pagina2.html
+++ b/pagina2.html
@@ -15,13 +15,13 @@
                     <a href="index.html"> PAGINA 1</a>
                 </li>
                 <li>
-                    <a href="pagina3.html"> Enlace 3</a>
+                    <a href="pagina3.html"> PAGINA 3</a>
                 </li>
                 <li>
-                    <a href="pagina4.html"> Enlace 4</a>
+                    <a href="pagina4.html"> PAGINA 4</a>
                 </li>
                 <li>
-                    <a href="pagina5.html"> Enlace 5</a>
+                    <a href="pagina5.html"> PAGINA 5</a>
                 </li>
             </ul>
         </nav>
