--- a/pagina3.html
+++ b/pagina3.html
@@ -5,92 +5,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: ghostwhite;">
     <div class="encabezados">
         <h1>TAMAÑO 1</h1>
         <h2>SEGUNDO TAMAÑO</h2>
-            <h3>Head</h3>
-                <h4>Mouthparts</h4>
-            <h3>Thorax</h3>
-                <h4>Prothorax</h4>
+            <h3>Los nombrs de mis mascotas son </h3>
+                <ul><h4>Duque, Bella , Osa y  Chino</h4></ul>
+            <h3>Cosas que me gusta hacer es:</h3>
+                <ul><h4>Cantar, hacer deporte, ver series y peliculas</h4></ul>
     </div>
-    <!--PARRAFOS-->
     <div class="parrafos">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum consequuntur doloribus perspiciatis asperiores debitis, maiores beatae nulla dolores doloremque repellendus quam est iusto, repudiandae dicta hic pariatur, vel sint sit.</p>
+        <p>Las tecnologías web son el conjunto de herramientas, lenguajes, protocolos y estándares utilizados para crear y gestionar contenido, 
+        aplicaciones y servicios en la web. Incluyen desde lenguajes de programación (como HTML, CSS, JavaScript) hasta protocolos de comunicación 
+        (como HTTP y HTTPS) y plataformas para desarrollar y ejecutar aplicaciones web (como servidores, bases de datos y frameworks). 
+        Estas tecnologías permiten la interacción y el intercambio de información a través de internet, facilitando el desarrollo de sitios web, 
+        aplicaciones web y servicios en línea.</p>
     </div>
     <div class="salto-de-linea">
-        <p>Podra nublarse el sol eternamente; <br>
-           Podra secarse en un instante el mar; <br>
-           Podra romperse el eje de la tierra; <br>
-           Como un debil cristal; <br>
+        <p>Avanza despacio, la meta es lejana,
+          no importa cuántas veces el alma se inflama. <br>
+          Caer y levantarse, volver a intentar, <br>
+          el río de la vida se cruza al remar. <br>
+          La paciencia es fuerte, su poder no cede, <br>
+          es el faro en la noche, es quien te precede. <br>
         </p>
-        <p>Todo sucedera! Podra la muerte <br>
-           Cubrirme con su funebre crespon; <br>
-           Pero jamas con su funebre crespon <br>
-           La llama de tu amor; <br>
+        <p>No te rindas nunca, aunque el viento azote, <br>
+          cada paso dado es un brote. <br>
+          La flor que florece, lo hace a su tiempo, <br>
+          cada sueño se logra con esfuerzo y aliento. <br>
+          Siembra hoy la semilla y espera su instante, <br>
+          la paciencia es el arma del perseverante. <br>
          </p>
     </div>
     <div class="cambio-de-tema">
-        <p>$1; La primer del club de la pelea es: No hablar del club de la pelea.</p>
+        <p>Esta es la primera parte de los elementos de texto</p>
         <hr>
-        <p>$2: La segunda regla del club de la pelea es: Siempre traer pastelillos </p>
+        <p>Esta es la continuacion sobre la segunda parte de los elementos de texto</p>
     </div>
     <div class="wbo">
         <p>
-            Existe una cancion que describe la forma milagrosa en la que un no puede salir airoso 
-            de situaciones dificiles. Esta cancion se llama Super <wbr> califrgilisticoespia 
-            http://www.ejemplo.com<wbr>/dsfsafsasdf<wbr> asdfasdf<wbr>asdfdfsda
+          La etiqueta "wbr" en HTML se utiliza para sugerir un posible punto de ruptura de línea dentro de una palabra larga, en caso de que sea necesario dividirla 
+          para ajustarla al ancho del contenedor. 
+          Esto ayuda a evitar que el contenido se desborde o afecte el diseño, especialmente en palabras o URLs muy largas que no contienen espacios.<br>
+          Este puedes ser <wbr> UnEjemplo http://www.ejemplo.com<wbr>/DelElemento<wbr>Texto<wbr>
         </p>
     </div>
-    <!--SUPERINDICE-->
     <div class="superindice">
-        <p>La ecuacion mas famosa del mundo es: </p>
-        <p>E = m.c <sub>2</sub></p>
+        <p>La formula de logaritmo de 8 es : </p>
+        <p>Log<sub>2</sub>8 = 3</p>
     </div>
-    <!--SUBINDICE-->
     <div class="subindice">
         <p>
-            El mejor amigo de todo desarrollador es:
-            C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>
-            tambien conocido como...
+          La formula de Hexafluorotiosfosfano es:
+          P<sub>8</sub>S<sub>10</sub>F<sub>4</sub>H<sub>2</sub>
+          estructura potencial...
         </p>
     </div>
     <div class="texto-muy-importante">
         <p>
-            ... la regla mas imporatante, la regla que nunca puedes olvidar,
-        no importa cuanto llore, no importa cuanto suplique:
-        <strong>nunca le des comida despues de la medianoche</strong>
+          ... la regla mas imporatante, la regla que nunca puedes olvidar,
+          Mantén tu código simple y comprensible."
+        <strong>¡Nunca ignores el manejo de errores en tu código!</strong>
         </p>
     </div>
     <div class="enfasis">
         <p>
-            <em>A mi</em> me gustan tus pinturas
+            <em>A mi</em> me gusta escuchar musicas todo tipo de musica menos electronica
         </p>
         <p>
-            A mi me gustan <em>tus</em> pinturas
+            A mi no me gustan <em>todas las peliculas de ...</em> terror
         </p>
     </div>
     <div class="mark">
-        <p>Socrates
-           se hacia el ignorante, es decir, aparentaba ser mas tonto de lo 
-           que era. Esto lo llamamos <mark>ironia socratica</mark>
+        <p> Steve Jobs
+          Tu tiempo es limitado, así que no lo desperdicies viviendo la vida de alguien más.
+           que era. Esto lo llamamos <mark> Steve Jobs:</mark>
         </p>
     </div>
     <div class="cita-en-linea">
-        <p>When Dave asks HAL to open th pod ba door , HAL answers: <q cite="https://www.com/title/tt0062622/quotes/qt0396921">
-        I'am sorry, Dave. I'm afraid Ican't do that.</q> 
+        <p>Esta etiqueta sirve para poner comillas con la etiqueta q <q cite="https://www.com/title/tt0062622/quotes/qt0396921">
+        Este es un mensaje usando html .</q> 
         </p>
     </div>
     <figure>
         <blockquote cite="https://www.goodreads.com/quotes/">
             <p>
-                Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.
+              Donde reina el amor sobran las leyes
             </p>
         </blockquote>
-        <figcaption>Albert Einstein, " <cite>Nonder and Skepticis</cite>"</figcaption>
+        <figcaption>Platon, " <cite> una reflexión acerca del amor como cohesionador social.</cite>"</figcaption>
     </figure>
     <div class="titulo-de-trabajo">
-        <p>Mi libro favorito es <cite>l cerebro de broca</cite> de Carll Sagan</p>
+        <p>Mi libro favorito es <cite>Amor a 4 estaciones</cite></p>NACARID PORTAL ARRAEZ
         <hr>
         <figure>
           <blockquote>
@@ -104,14 +110,12 @@
           <figcaption>Nicholas Falletta, <cite>Las trampas de la paradoja</cite></figcaption>
         </figure>
     </div>
-     <!-- DEFINICIÓN DE TÉRMINOS -->
      <div class="definiciones">
         <p>
-          Un <dfn>validador</dfn> es un programa que revisa errores de sintaxis en el código o documentos.
+          El <dfn>parcel</dfn> es un empaquetador de aplicaciones web ("bundler") que sirve para compilar y empaquetar archivos de un proyecto.
         </p>
     </div>
-
-      <div class="abreviaturas">
+    <div class="abreviaturas">
         <p>
           Puedes usar <abbr title="Cascading Style Sheets">CSS</abbr> para darle estilo a tu <abbr title="HyperText Markup Language">HTML</abbr>.
         </p>
@@ -119,18 +123,18 @@
       <!-- TEXTO PEQUEÑO -->
     <div class="texto">
         <p>
-          MDN Web Docs es una plataforma de aprendizaje de tecnologías web y software que impulsa la web.
+          Los mejores libros de c++ esta de manera fisica en la biblioteca de la universidad catolica boliviana.
         </p>
         <p>
-          <small>El contenido está disponible bajo una licencia Creative Commons.</small>
+          <small>El contenido está disponible bajo una licencia de la UCB .</small>
         </p>
     </div>
       <!-- TEXTO AÑADIDO (El señor de los anillos) -->
     <div class="texto-agregado">
-        <p><del>Llegas tarde</del></p>
-        <p><del>Me disculpo por la demora.</del></p>
+        <p><del>El proyecto de la materia de desarrollo de software no la acbaremos a tiempo</del></p>
+        <p><del>Me disculpo se me juntaron todas las tareas</del></p>
         <ins cite="https://howtobeawizard.html" datetime="2018-05">
-          <p>Un mago nunca llega tarde.</p>
+          <p>No deberiamos hacer todo a ultima hora </p>
         </ins>
     </div>
     <!-- TEXTO ELIMINADO -->
@@ -167,7 +171,6 @@
           </pre>
         </div>
     </div>
-    <!-- SALIDA DE COMPUTADORA -->
     <div class="salida-computadora">
         <p>Estaba tratando de iniciar mi computadora, pero recibí este divertido mensaje:</p>
         <samp>
@@ -178,41 +181,40 @@
     <!-- ENTRADA DE USUARIO -->
     <div class="entrada-usuario">
         <p>
-          Para copiar un texto, selecciónelo y luego presione 
-          <kbd>Ctrl</kbd>+<kbd>C</kbd> y <kbd>Ctrl</kbd>+<kbd>V</kbd>.
+          Para cortar un texto, selecciónelo y luego presione 
+          <kbd>Ctrl</kbd>+<kbd>X</kbd> y <kbd>Ctrl</kbd>+<kbd>V</kbd>.
         </p>
     </div>
-    <!-- CONSERVAR FORMATO -->
     <div class="conservar-formato">
         <pre>
-          I'm an expert in my field.
-           _______
-          <(o_o)> 
-          (     )  
-           \|_|/    
+          This is a cat.
+           /\_/\  
+          ( o.o ) 
+           > ^ < 
         </pre>
     </div>
-      <!-- CONSERVAR FORMATO -->
     <div class="conservar-formato">
         <p>Usar CSS para cambiar el color de la fuente es fácil.</p>
         <pre>
-          body {
+          body{
+            color: blue;
+          }
+          header {
             color: red;
           }
         </pre>
     </div>
-    <!-- INFORMACIÓN DE CONTACTO -->
     <div class="contacto">
-        <p>Contacte al autor de esta página:</p>
+        <p>Para ir a las siguientes paginas:: </p>
         <address>
-          <a href="mailto:jmgrock.com">beltran@ucb.edu.bo</a><br>
-          <a href="tel:+3115552363">(311) 555-2363</a>
+          <a href="pagina4.html">PAGINA 4</a><br>
+          <a href="pagina5.html">PAGINA 5</a>
         </address>
     </div>
     <!-- CARACTERES ESPECIALES -->
     <div class="caracteres-especiales">
-        <p>El elemento &lt;html&gt; representa la raíz de un documento HTML, por lo que también se denomina elemento raíz. Todos los demás elementos deben ser descendientes de este elemento.</p>
-        <p>&lt;p&gt;Lorem ipsum dolor sit amet consectetur adipiscing elit.&lt;/p&gt;</p>
+        <p>El desarrolo web tiene dos formas de clasificarse y son : &lt;Frontend&gt; por cuestiones de desarrolo se divide en 2 partes la primera Es la parte que interactúa con el usuario.</p>
+        <p>&lt; Backend&gt;Se refiere a la parte que está en contacto directo con el servidor.&lt;/p&gt;</p>
     </div>
 </body>
 </html>
