Modificacion de paginas

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <div id="main">
             <div id="article">
                 <div id="secction-1">En esta primera parte se llevara acabo el uso de bloques de las etiquetas div y spam que son los elementos genericos de la primera parte de este trabajo, en la segunda pagina veremos elementos semanticos, luego la pagina 3 elementos de texto y por ultimo tabls que estan en los enlaces anteriormente  </div>
-                <div id="secction-2">Div todo el BLOQUE y Spam es de LINEA</div>
+                <div id="secction-2">Div todo el <span class="keyword">BLOQUE </span> y Spam es de <span class="keyword">LINEA</span></div><br>
+                <img src="img/bloqueLinea.jpeg" alt="Un boton de bloque y linea" width="500px" srcset="">
             </div>
         </div>
-    <div id="aside-rigth">SISTEMAS DE INFORMACION</div>
+    <div id="aside-rigth">INGENIERIA EN SISTEMAS</div>
 
     <div id="footer">FECHA DE ENTREGA 3O DE SEPTIEMBRE DEL 2024</div>
     
