--- a/pagina2.html
+++ b/pagina2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style/style2.css">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: skyblue;">
     <header>
         <H1>ELEMENTOS SEMANTICOS</H1>
         <nav>
@@ -32,7 +32,8 @@
                 <section>
                     <p>En esta seegunda parte veremos <spam class="keyword">ELEMENTOS SEMANTICOS</spam> es similar a la pagina anterior solo que con elementos semnticos es decir cada uno tiene su propia funcion de acuerdo al elemento</p></section>
                 <section>
-                    <p>Las etiquetas que formas parte de los elementos semanticos son los siguiente <spam class="keyword">header,nav,aside,main,article,secction y footer</spam> todos ellos tienen una funcion diferente y todos lo de bloque</p></secction>
+                    <p>Las etiquetas que formas parte de los elementos semanticos son los siguiente <spam class="keyword">header,nav,aside,main,article,secction y footer</spam> todos ellos tienen una funcion diferente y todos lo de bloque</p></secction><br>
+                    <img src="img/semantica.jpeg" alt="Un boton de bloque y linea" width="500px" srcset="">
             </article>
         </main>
     <aside>Sin elementos div y spam</aside>
