--- a/pagina3.html
+++ b/pagina3.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: ghostwhite;">
+<body style="background-color: rgb(147, 221, 250)">
     <div class="encabezados">
-        <h1>TAMAÑO 1</h1>
-        <h2>SEGUNDO TAMAÑO</h2>
+        <h1>INFORMACION SOBRE MI</h1>
+        <h2>Me gustan muchos los animales</h2>
             <h3>Los nombrs de mis mascotas son </h3>
                 <ul><h4>Duque, Bella , Osa y  Chino</h4></ul>
             <h3>Cosas que me gusta hacer es:</h3>
                 <ul><h4>Cantar, hacer deporte, ver series y peliculas</h4></ul>
     </div>
     <div class="parrafos">
+        <caption>Definicio de tecnologias Web</caption>
         <p>Las tecnologías web son el conjunto de herramientas, lenguajes, protocolos y estándares utilizados para crear y gestionar contenido, 
         aplicaciones y servicios en la web. Incluyen desde lenguajes de programación (como HTML, CSS, JavaScript) hasta protocolos de comunicación 
         (como HTTP y HTTPS) y plataformas para desarrollar y ejecutar aplicaciones web (como servidores, bases de datos y frameworks). 
@@ -120,7 +121,6 @@
           Puedes usar <abbr title="Cascading Style Sheets">CSS</abbr> para darle estilo a tu <abbr title="HyperText Markup Language">HTML</abbr>.
         </p>
     </div>
-      <!-- TEXTO PEQUEÑO -->
     <div class="texto">
         <p>
           Los mejores libros de c++ esta de manera fisica en la biblioteca de la universidad catolica boliviana.
@@ -129,7 +129,6 @@
           <small>El contenido está disponible bajo una licencia de la UCB .</small>
         </p>
     </div>
-      <!-- TEXTO AÑADIDO (El señor de los anillos) -->
     <div class="texto-agregado">
         <p><del>El proyecto de la materia de desarrollo de software no la acbaremos a tiempo</del></p>
         <p><del>Me disculpo se me juntaron todas las tareas</del></p>
@@ -137,39 +136,11 @@
           <p>No deberiamos hacer todo a ultima hora </p>
         </ins>
     </div>
-    <!-- TEXTO ELIMINADO -->
-    <div class="texto-eliminado">
-        <p>Llegas tarde</p>
-        <p><del>Me disculpo por la demora.</del></p>
-        <ins cite="https://howtobeawizard.html" datetime="2018-05">
-          <p>Un mago nunca llega tarde.</p>
-        </ins>
-    </div>
-
-    <div class="tachar-texto">
-        <p><s>Habrá algunas entradas disponibles esta noche.</s></p>
-        <p>AGOTADO!</p>
-    </div>
     <hr>
     <div class="tachar-texto">
         <p>¡Compra nuestro té helado y limonada!</p>
         <p><s>Precio de venta recomendado: $3,99 por botella</s></p>
         <p><strong>¡Ahora a la venta por solo $2.99 la botella!</strong></p>
-    </div>
-    <!-- CÓDIGO -->
-    <div class="codigo">
-        <p>El método <code>push()</code> agrega uno o más elementos al final de una matriz y devuelve la nueva longitud de la matriz.</p>
-        <hr>
-        <div class="codigo">
-          <pre>
-            <code class="language-pascal">
-            var i: Integer;
-            begin
-                i := 1;
-            end.
-            </code>
-          </pre>
-        </div>
     </div>
     <div class="salida-computadora">
         <p>Estaba tratando de iniciar mi computadora, pero recibí este divertido mensaje:</p>
