--- a/pagina4.html
+++ b/pagina4.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style3.css">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: bisque;">
     <nav style="background-color: salmon;">
         <ul>
             <li>
@@ -23,12 +24,12 @@
         </ul>
     </nav>
     <table style="background-color: burlywood;">
-        <caption>Informacion personal</caption>
+        <caption>TABLA</caption>
         <thead>
             <tr>
                 <th colspan="2"  style="background-color: aqua; padding: 15px;">Nombres</th>
-                <th rowspan="2" style="background-color: blueviolet; padding: 15px;">Color Favorito</th>
-                <th colspan="3" style="background-color: yellow; padding: 15px;">Cosas Favoritas</th>
+                <th rowspan="2" style="background-color: blueviolet; padding: 15px;">Colores</th>
+                <th colspan="3" style="background-color: yellow; padding: 15px;">Tipos</th>
             </tr>
             <tr>
                 <th style="background-color: brown; padding: 15px;">Ciudades</th>
