--- a/pagina5.html
+++ b/pagina5.html
@@ -23,12 +23,17 @@
         </ul>
     </nav>
     <h1>Mascotas</h1>
-    <img src="img/imagen.jpg" alt="Un boton de un conejo" width="200px" srcset="">
-    <img src="img/imagen2.png" alt="Un boton de unos perros" width="300px" srcset="">
+    <img src="img/imagen.jpg" alt="Un boton de un conejo" width="200px" srcset=""><br>
+    <img src="img/imagen2.png" alt="Un boton de unos perros" width="400px" srcset=""><br>
+    <img src="img/imagen6.bmp" alt="Un boton de un perro" width="150px" srcset=""><br>
+    <img src="img/imagen7.jpg" alt="Un boton de unos peces" width="300px" srcset=""><br>
     <h2>Lugar turistico</h2>
-    <img src="img/imagen4.png" alt="Un boton de unos perros" width="300px" srcset="">
-    <!---
-    <h3>Imagen de autor</h3>
-    <img src="img/imagen3.bmp" alt="Un boton de uno ciudad" width="200px" srcset="">-->
+    <img src="img/imagen4.png" alt="Un boton de paisaje" width="300px" srcset="">
+    <img src="img/imagen8.jpg" alt="Un boton de unos paisajes" width="300px" srcset="">
+    <h3>Vajes Realizados</h3>
+    <img src="img/viaje1.jpg" alt="Un boton de viajes" width="300px" srcset="">
+    <img src="img/viaje2.jpg" alt="Un boton de viajes" width="300px" srcset="">
+    <img src="img/viaje3.jpg" alt="Un boton de viajes" width="300px" srcset="">
+    <img src="img/viaje4.jpg" alt="Un boton de viajes" width="300px" srcset="">
 </body>
 </html>
