--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="header">
+        <h1>ELEMENTOS GENERICOS</h1>
         <div id="nav">
             <ul>
                 <li>
